// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render the room and the hoover controller when the display in state changed 1`] = `
Array [
  <div
    className="header"
>
    <h1
        className="header--title"
    >
        Hoover app
    </h1>
</div>,
  <div>
    <div
        className="centre"
    >
        <form
            style={
                Object {
                    "padding": 50,
                  }
            }
        >
            <h3>
                Row
            </h3>
            <label />
            <input
                data-test="input"
                disabled={false}
                name="row"
                onChange={[Function]}
                placeholder="number"
                type="number"
            />
        </form>
        <form
            style={
                Object {
                    "padding": 50,
                  }
            }
        >
            <h3>
                Column
            </h3>
            <label />
            <input
                data-test="input"
                disabled={false}
                name="column"
                onChange={[Function]}
                placeholder="number"
                type="number"
            />
        </form>
    </div>
    <div
        className="centre"
    >
        <button
            className="btn"
            onClick={[Function]}
        >
             Create the room 
        </button>
    </div>
</div>,
  <hr />,
]
`;

exports[`render the room and the hoover controller when the display in state changed 2`] = `
Array [
  <div
    className="header"
>
    <h1
        className="header--title"
    >
        Hoover app
    </h1>
</div>,
  <div>
    <div
        className="centre"
    >
        <form
            style={
                Object {
                    "padding": 50,
                  }
            }
        >
            <h3>
                Row
            </h3>
            <label />
            <input
                data-test="input"
                disabled={true}
                name="row"
                onChange={[Function]}
                placeholder="number"
                type="number"
            />
        </form>
        <form
            style={
                Object {
                    "padding": 50,
                  }
            }
        >
            <h3>
                Column
            </h3>
            <label />
            <input
                data-test="input"
                disabled={true}
                name="column"
                onChange={[Function]}
                placeholder="number"
                type="number"
            />
        </form>
    </div>
    <div
        className="centre"
    >
        <form
            style={
                Object {
                    "padding": 50,
                  }
            }
        >
            <h3>
                Dirt position
            </h3>
            <label>
                please write a number between 0 and 100
            </label>
            <input
                data-test="input"
                name="dirt"
                onChange={[Function]}
                placeholder="number"
                type="number"
            />
        </form>
        <button
            className="btn"
            onClick={[Function]}
        >
             Create the room 
        </button>
    </div>
</div>,
  <hr />,
  <div
    className="container"
>
    <div
        className="roomFloor"
        style={
            Object {
                "width": "510px",
              }
        }
    >
        <div
            className="cell"
            id={1}
        />
        <div
            className="cell"
            id={2}
        />
        <div
            className="cell"
            id={3}
        />
        <div
            className="cell"
            id={4}
        />
        <div
            className="cell"
            id={5}
        />
        <div
            className="cell"
            id={6}
        />
        <div
            className="cell"
            id={7}
        />
        <div
            className="cell"
            id={8}
        />
        <div
            className="cell"
            id={9}
        />
        <img
            alt="a robotic hoover"
            className="cell"
            src="Hoover_01png"
        />
        <div
            className="cell"
            id={11}
        />
        <div
            className="cell"
            id={12}
        />
        <div
            className="cell"
            id={13}
        />
        <div
            className="cell"
            id={14}
        />
        <div
            className="cell"
            id={15}
        />
        <div
            className="cell"
            id={16}
        />
        <div
            className="cell"
            id={17}
        />
        <div
            className="cell"
            id={18}
        />
        <div
            className="cell"
            id={19}
        />
        <div
            className="cell"
            id={20}
        />
        <div
            className="cell"
            id={21}
        />
        <div
            className="cell"
            id={22}
        />
        <div
            className="cell"
            id={23}
        />
        <div
            className="cell"
            id={24}
        />
        <div
            className="cell"
            id={25}
        />
        <div
            className="cell"
            id={26}
        />
        <div
            className="cell"
            id={27}
        />
        <div
            className="cell"
            id={28}
        />
        <div
            className="cell"
            id={29}
        />
        <div
            className="cell"
            id={30}
        />
        <div
            className="cell"
            id={31}
        />
        <div
            className="cell"
            id={32}
        />
        <div
            className="cell"
            id={33}
        />
        <div
            className="cell"
            id={34}
        />
        <div
            className="cell"
            id={35}
        />
        <div
            className="cell"
            id={36}
        />
        <div
            className="cell"
            id={37}
        />
        <div
            className="cell"
            id={38}
        />
        <div
            className="cell"
            id={39}
        />
        <div
            className="cell"
            id={40}
        />
        <div
            className="cell"
            id={41}
        />
        <div
            className="cell"
            id={42}
        />
        <div
            className="cell"
            id={43}
        />
        <div
            className="cell"
            id={44}
        />
        <div
            className="cell"
            id={45}
        />
        <div
            className="cell"
            id={46}
        />
        <div
            className="cell"
            id={47}
        />
        <img
            alt="an imaginary dirt"
            className="cell"
            src="Dirt_01.png"
        />
        <div
            className="cell"
            id={49}
        />
        <div
            className="cell"
            id={50}
        />
        <div
            className="cell"
            id={51}
        />
        <div
            className="cell"
            id={52}
        />
        <div
            className="cell"
            id={53}
        />
        <div
            className="cell"
            id={54}
        />
        <div
            className="cell"
            id={55}
        />
        <div
            className="cell"
            id={56}
        />
        <div
            className="cell"
            id={57}
        />
        <div
            className="cell"
            id={58}
        />
        <div
            className="cell"
            id={59}
        />
        <div
            className="cell"
            id={60}
        />
        <div
            className="cell"
            id={61}
        />
        <div
            className="cell"
            id={62}
        />
        <div
            className="cell"
            id={63}
        />
        <div
            className="cell"
            id={64}
        />
        <div
            className="cell"
            id={65}
        />
        <div
            className="cell"
            id={66}
        />
        <div
            className="cell"
            id={67}
        />
        <div
            className="cell"
            id={68}
        />
        <div
            className="cell"
            id={69}
        />
        <div
            className="cell"
            id={70}
        />
        <div
            className="cell"
            id={71}
        />
        <div
            className="cell"
            id={72}
        />
        <div
            className="cell"
            id={73}
        />
        <div
            className="cell"
            id={74}
        />
        <div
            className="cell"
            id={75}
        />
        <div
            className="cell"
            id={76}
        />
        <div
            className="cell"
            id={77}
        />
        <div
            className="cell"
            id={78}
        />
        <div
            className="cell"
            id={79}
        />
        <div
            className="cell"
            id={80}
        />
        <div
            className="cell"
            id={81}
        />
        <div
            className="cell"
            id={82}
        />
        <div
            className="cell"
            id={83}
        />
        <div
            className="cell"
            id={84}
        />
        <div
            className="cell"
            id={85}
        />
        <div
            className="cell"
            id={86}
        />
        <div
            className="cell"
            id={87}
        />
        <div
            className="cell"
            id={88}
        />
        <div
            className="cell"
            id={89}
        />
        <div
            className="cell"
            id={90}
        />
        <div
            className="cell"
            id={91}
        />
        <div
            className="cell"
            id={92}
        />
        <div
            className="cell"
            id={93}
        />
        <div
            className="cell"
            id={94}
        />
        <div
            className="cell"
            id={95}
        />
        <div
            className="cell"
            id={96}
        />
        <div
            className="cell"
            id={97}
        />
        <div
            className="cell"
            id={98}
        />
        <div
            className="cell"
            id={99}
        />
        <div
            className="cell"
            id={100}
        />
    </div>
    <div
        className="hooverController"
    >
        <h1>
            Hoover Controller
        </h1>
        <button
            className="up btn-controller"
            onClick={[Function]}
        >
            <img
                alt="arrow up"
                src="arrow.png"
            />
        </button>
        <div>
            <button
                className="btn-controller"
                onClick={[Function]}
            >
                <img
                    alt="arrow left"
                    src="arrow.png"
                />
            </button>
            <button
                className="right btn-controller"
                onClick={[Function]}
            >
                <img
                    alt="arrow right"
                    src="arrow.png"
                />
            </button>
        </div>
        <button
            className="down btn-controller"
            onClick={[Function]}
        >
            <img
                alt="arrow down"
                src="arrow.png"
            />
        </button>
    </div>
</div>,
]
`;

exports[`render the whole app 1`] = `
Array [
  <div
    class="header"
>
    <h1
        class="header--title"
    >
        Hoover app
    </h1>
</div>,
  <div>
    <div
        class="centre"
    >
        <form
            style="padding:50px"
        >
            <h3>
                Row
            </h3>
            <label>
                
            </label>
            <input
                data-test="input"
                name="row"
                placeholder="number"
                type="number"
            >
                
            </input>
        </form>
        <form
            style="padding:50px"
        >
            <h3>
                Column
            </h3>
            <label>
                
            </label>
            <input
                data-test="input"
                name="column"
                placeholder="number"
                type="number"
            >
                
            </input>
        </form>
    </div>
    <div
        class="centre"
    >
        <button
            class="btn"
        >
             Create the room 
        </button>
    </div>
</div>,
  <hr>
    
</hr>,
]
`;
